@@ -1,6 +1,10 @@
 20051129
  - (tim) [ssh-keygen.c] Move DSA length test after setting default when
    bits == 0.
+ - (dtucker) OpenBSD CVS Sync
+   - dtucker@cvs.openbsd.org 2005/11/29 02:04:55
+     [ssh-keygen.c]
+     Populate default key sizes before checking them; from & ok tim@
 
 20051128
  - (dtucker) [regress/yes-head.sh] Work around breakage caused by some
